--- a/CVPR2020.md
+++ b/CVPR2020.md
@@ -7,35 +7,49 @@ https://openaccess.thecvf.com/CVPR2020
 
 ### 2D Object Detection
 
+- Rethinking Classification and Localization for Object Detection  
+クラス判定にはfc-headが、localization(regression)にはconv-headがよいので、headをそのように設計する。
+
+- Multiple Anchor Learning for Visual Object Detection  
+Bag of Anchor (予想したAnchorのセット）に対して、confidenceRefineするtrainableなモジュールを導入。mAP+4~。
+
 - Camouflaged Object Detection  
 カモフラージュされた物体のデータセットの提供。
-- Large-Scale Object Detection in the Wild From Imbalanced Multi-Labels
-- Rethinking Classification and Localization for Object Detection
-- Multiple Anchor Learning for Visual Object Detection
-- CentripetalNet: Pursuing High-Quality Keypoint Pairs for Object Detection
-- Learning From Noisy Anchors for One-Stage Object Detection
-- EfficientDet: Scalable and Efficient Object Detection
-- Overcoming Classifier Imbalance for Long-Tail Object Detection With Balanced Group Softmax
+
+- CentripetalNet: Pursuing High-Quality Keypoint Pairs for Object Detection  
+CornerからCenterへの向き(と距離?)を推論させ、マッチングを取る。DenseなOjbectsに対するMatching problemを緩和。
+
+- Learning From Noisy Anchors for One-Stage Object Detection  
+train時に、accをもとにcandidate anchorを重み付けし、分類のsoft-labelとして使う＆lossのweightとして使う
+
+- EfficientDet: Scalable and Efficient Object Detection  
+入力サイズ、FPN回数、Head等のスケーリング。SOTA達成。
+
+- Scale-Equalizing Pyramid Convolution for Object Detection
 - Dynamic Refinement Network for Oriented and Densely Packed Object Detection
-- Noise-Aware Fully Webly Supervised Object Detection
-- Hit-Detector: Hierarchical Trinity Architecture Search for Object Detection
 - D2Det: Towards High Quality Object Detection and Instance Segmentation
-- Prime Sample Attention in Object Detection
-- Exploring Categorical Regularization for Domain Adaptive Object Detection
-- SP-NAS: Serial-to-Parallel Backbone Search for Object Detection
-- NAS-FCOS: Fast Neural Architecture Search for Object Detection
-- DR Loss: Improving Object Detection by Distributional Ranking
+- Noise-Aware Fully Webly Supervised Object Detection
+- Seeing without Looking: Contextual Rescoring of Object Detections for AP Maximization
+
+- Large-Scale Object Detection in the Wild From Imbalanced Multi-Labels
 - AugFPN: Improving Multi-Scale Feature Learning for Object Detection
-- Robust Object Detection Under Occlusion With Context-Aware CompositionalNets
+- Offset Bin Classification Network for Accurate Object Detection
+- Overcoming Classifier Imbalance for Long-Tail Object Detection With Balanced Group Softmax
+- Prime Sample Attention in Object Detection
 - Cross-Domain Document Object Detection: Benchmark Suite and Method
+- Exploring Categorical Regularization for Domain Adaptive Object Detection
+- DR Loss: Improving Object Detection by Distributional Ranking
+- Robust Object Detection Under Occlusion With Context-Aware CompositionalNets
+
 - Context R-CNN: Long Term Temporal Context for Per-Camera Object Detection
 - Mixture Dense Regression for Object Detection and Human Pose Estimation
-- Offset Bin Classification Network for Accurate Object Detection
-- Scale-Equalizing Pyramid Convolution for Object Detection
-- MnasFPN: Learning Latency-Aware Pyramid Architecture for Object Detection on Mobile Devices
 - Cross-domain Object Detection through Coarse-to-Fine Feature Adaptation
 - Learning a Unified Sample Weighting Network for Object Detection
-- Seeing without Looking: Contextual Rescoring of Object Detections for AP Maximization
+##### Search Archi
+- SP-NAS: Serial-to-Parallel Backbone Search for Object Detection
+- Hit-Detector: Hierarchical Trinity Architecture Search for Object Detection
+- NAS-FCOS: Fast Neural Architecture Search for Object Detection
+- MnasFPN: Learning Latency-Aware Pyramid Architecture for Object Detection on Mobile Devices
 
 ### Weakly-Supervided, Few-shot
 - Evaluating Weakly Supervised Object Localization Methods Right  
